--- a/common/etc/nginx/sites-available/isucondition.conf
+++ b/common/etc/nginx/sites-available/isucondition.conf
@@ -4,6 +4,11 @@ server {
     ssl_certificate /etc/nginx/certificates/tls-cert.pem;
     ssl_certificate_key /etc/nginx/certificates/tls-key.pem;
 
+    location /api/condition {
+        proxy_set_header Host $http_host;
+        proxy_pass https://isucondition-3.t.isucon.dev;
+    }
+
     location / {
         proxy_set_header Host $http_host;
         proxy_pass http://127.0.0.1:3000;
