--- a/common/etc/nginx/sites-available/isucondition.conf
+++ b/common/etc/nginx/sites-available/isucondition.conf
@@ -6,7 +6,7 @@ server {
 
     location /api/condition {
         proxy_set_header Host $http_host;
-        proxy_pass https://isucondition-3.t.isucon.dev;
+        proxy_pass http://isucondition-3.t.isucon.dev:3000;
     }
 
     location / {
