--- a/s2/etc/mysql/mariadb.conf.d/50-server.cnf
+++ b/s2/etc/mysql/mariadb.conf.d/50-server.cnf
@@ -39,6 +39,7 @@ bind-address            = 0.0.0.0
 # the first time they are touched
 #myisam_recover_options = BACKUP
 #max_connections        = 100
+max_connections        = 1024
 #table_cache            = 64
 #thread_concurrency     = 10
 
